# Omni-Telegram-bot

./: .env.example  .gitignore  Dockerfile  PIPELINE.md  PROJECT_STATUS.md  README.md  STACK.md  docker-compose.prod.yml  docker-compose.yml  main.py  project_memo.md  pyproject.toml  render.yaml  requirements.txt
Recent/: implementation_plan.md.resolved  task.md.resolved
bot/: __init__.py  main.py  utilities.py
bot/handlers/: __init__.py  chat.py  directDownloader.py  generateAudio.py  generateImage.py  generateVideo.py  instaDownloader.py  musicDownloader.py  transcribe.py  videoDownloader.py  ytDownloader.py
k8s/: deployment.yaml
models/: pipeline_job.py
workers/: assembly_tasks.py  celery_app.py  generation_tasks.py  intelligence_tasks.py  upload_tasks.py
