[project]
name = "autoytube-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.25.0",
    "alembic==1.18.4",
    "anthropic==0.84.0",
    "asyncpg==0.31.0",
    "celery==5.6.2",
    "elevenlabs==2.37.0",
    "ffmpeg-python==0.2.0",
    "google-genai>=1.65.0",
    "groq>=1.0.0",
    "openai==2.24.0",
    "prometheus-client==0.24.1",
    "python-dotenv==1.2.1",
    "redis==7.2.1",
    "requests==2.32.5",
    "sentry-sdk==2.53.0",
    "sqlalchemy==2.0.47",
    "uuid>=1.30",
    "yt-dlp>=2026.3.3",
]
